@@ -1,3 +1,8 @@
+2007-12-18  Nathan Froyd  <froydnj@codesourcery.com>
+
+	* lto.c (lto_read_subroutine_type_subprogram_DIE): Initialize
+	'declaration'.  Set the assembler name for non-public functions.
+
 2007-12-17  Kenneth Zadeck <zadeck@naturalbridge.com>
 
 	* lto_read.c (data_in.unexpanded_indexes): New array.
